<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fragment"
            type="com.astery.xapplication.ui.fragments.addEvent.endEvent.EndEventFragment" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText" >
    <ImageView
        android:id = "@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src = "@drawable/dating"
        android:scaleType="centerCrop"
        android:contentDescription="@string/item_image_CD" />
    <TextView
        style="@style/HighLightText"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize = "25dp"
        android:layout_marginTop="30dp"
        android:text = "@string/well_done"
        />
    <TextView
        style="@style/ArticleText"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:text = "@string/add_new_event_contratulation"
        />

    <TextView
        style="@style/ArticleText"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/more_info_text"
        android:layout_marginLeft="75dp"
        android:textSize="18dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="40dp"
        android:text = "We strongly recommend you to get advices how to solve problems with this events. It may help you to stay healthy and satisfied."
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id = "@+id/get_advice"
        android:text = "Get advices"
        android:layout_marginTop="30dp"
        android:onClick="@{(view) -> fragment.moveToAdvices()}"
        android:layout_gravity="center"
        style="@style/CommonButton"/>
    <Button
        android:id = "@+id/ignore"
        android:text = "Ignore"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:onClick = "@{(view) -> fragment.moveToCalendar()}"
        android:layout_gravity="center"
        style="@style/IgnoreButton"/>

</LinearLayout>
</layout>