<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <import type="android.view.View" />
        <import type="com.astery.xapplication.ui.fragments.addEvent.customizeEvent.AddEventViewModel.JobState"/>
        <variable
            name="viewModel"
            type="com.astery.xapplication.ui.fragments.addEvent.customizeEvent.AddEventViewModel" />
    </data>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/margin_frame"
    android:paddingTop="90dp"
    android:scrollbars="none"
    android:clipToPadding = "false"
    android:layout_marginRight="@dimen/margin_frame"
    android:overScrollMode="never"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/container"
        android:orientation="vertical">

    <ImageView
        android:id = "@+id/event_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src = "@drawable/article_placeholder"
        android:scaleType="centerCrop"
        android:contentDescription="@string/item_image_CD" />
    <TextView
        style="@style/HighLightText"
        android:id = "@+id/event_name"
        android:layout_marginTop="30dp"
        android:text = "@{viewModel.template.name}"
        />

    <TextView
        style="@style/ArticleText"
        android:id = "@+id/event_content"
        android:layout_marginTop="30dp"
        android:text = "@{viewModel.template.body}"
        />

    <View
        android:layout_marginTop="20dp"
        style="@style/divider"
        android:visibility="@{viewModel.questions != null ? View.VISIBLE : View.GONE}"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        />

        <TextView
            android:id = "@+id/title_questions"
            style="@style/HighLightText"
            android:layout_marginTop="30dp"
            android:visibility="@{viewModel.questions != null ? View.VISIBLE : View.GONE}"
            android:text = "@string/event_more_info"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id = "@+id/recyclerView"
            android:paddingTop="20dp"
            android:visibility="@{viewModel.questions != null ? View.VISIBLE : View.GONE}"
            android:nestedScrollingEnabled="false"
            android:layout_height="wrap_content"/>

        <Button
            android:id = "@+id/submit"
            style="@style/CommonButton"
            android:text="@string/submit"
            android:enabled="@{viewModel.addEventState == JobState.Idle ? true : false}"
            android:clickable="@{viewModel.addEventState == JobState.Idle ? true : false}"
            android:layout_marginTop="40dp"
            android:layout_gravity="right"
            />

    </LinearLayout>
</ScrollView>
</layout>